Make scrollList scrollable, fix alignment of title with logo

--- a/frontend/src/providerOverview.css
+++ b/frontend/src/providerOverview.css
@@ -6,12 +6,11 @@
 .title {
   font-size: 25px;
   padding-left: 10px;
-  padding-top: 5px;
   vertical-align: text-top;
 }
 
 .parent-container {
   padding-top: 10px;
   display: flex;
-  vertical-align: center;
+  align-items: center;
 }
