--- a/frontend/src/scrollList.css
+++ b/frontend/src/scrollList.css
@@ -17,6 +17,8 @@
 }
 
 .scroll-list {
+  max-height: 100vh;
+  overflow-y: auto;
   background-color: #42607b;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   width: 580px;
